-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0 Beta1
-
Ubuntu24.04 x64, Wayland
-
-
513a38a50 (dev), 2662d6bbc (6.10)
Install Qt 6.10.0 beta1 gcc x64 binaries on Ubuntu24.04 x64 (Wayland), including all additional modules.
Configure example opengl/cube:
/home/qt/RTA/Qt_6.10.0/6.10.0/gcc_64/bin/qt-cmake -S /home/qt/RTA/Qt_6.10.0/Examples/Qt-6.10.0/opengl/cube -B /home/qt/RTA/Qt_6.10.0/Examples/Qt-6.10.0/opengl/cube/bld_gcc_64 -GNinja
passes, build with cmake --build passes also, but when launching:
MESA: error: ZINK: failed to choose pdev libEGL warning: egl: failed to create dri2 screen QWaylandGLContext::makeCurrent: eglError: 0x3009, this: 0x56ca536f70b0 QRhiGles2: Failed to make context current. Expect bad things to happen. Failed to create QRhi for QBackingStoreRhiSupport QOpenGLWidget: No fbo, cannot render
Application launched with 6.9.1 on Ubuntu22.04 x64 (x11).
| For Gerrit Dashboard: QTBUG-137739 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 654043,4 | wayland: Initialize surface format on construction | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 654185,2 | wayland: Initialize surface format on construction | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |