wayland: Initialize surface format on construction

QPlatformWindow::surfaceFormat should return the requestedFormat until
the surface is created.

Fixes: QTBUG-137739
Change-Id: I483cc47d96fc0edb110c1ad80d20eb4d96bc1202
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit 513a38a50ad260b957eb7ab1b92f8e7c40fef9e7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>